Revision history for Device-USB

0.28   2009/02/12
        Thanks to Vadim Mikhailov for patches supporting the ActiveState
        5.10 version, including upgrading to VS 2005.
0.27   2008/11/08
        Add dependency on Inline:MakeMaker to help CPAN Testers builds.
        Update documentation to reference the Google Code project.
0.26   2008/11/02
        Correct skip count on test 13 to fix FreeBSD tests.
0.25   2008/10/10
        Yet another modification to try to get the tests cleaned up for the
        CPAN Testers. Modify tests 13 and 14 to skip if no USB busses are
        found instead of failing.
0.24   2008/10/09
        Undo a modification to the parameter handling on bulk_read and
        interrupt read. The change broke the methods completely. Thanks to
        Tony Shadwick for pointing it out.
0.23   2008/10/04
        More documentation cleanup, including correcting the spelling of
        John Hogerhuis's name.
        Correcting tests 15, 16, and 17 to skip if no devices are found
        instead of failing.
0.22   2008/10/02
        Perform cleanup of tests for Mac OSX, as well as changes to clean
        code for newer Perl::Critic policies.
        Correction to documentation of Device::USB::Device methods bulk_write
        and interrupt_write (reported by John R. Hogerhuis).
        Modified the Inline attributes to make building under systems other
        than Linux a bit easier. (thanks to John R. Hogheruis for the insight).
        Make creation of makefile fail if Windows and environment not properly
        set up.
0.21    2007/04/16
        Thanks to Vadim Mikhailov for spotting a problem with use of the macro
        Inline_Stack_Vars that prevented compilation under Windows. Applied
        Vadim's patch.
0.20    2006/11/18
        Added support for interface objects and corrected the code
        returning the code. Previous versions had only returned the first
        setting of the interface.