@@ -1,18 +1,26 @@
 --- #YAML:1.0
-name:                Device-USB
-version:             0.28
-abstract:            Use libusb to access USB devices.
-license:             ~
-author:              
+name:               Device-USB
+version:            0.29
+abstract:           Use libusb to access USB devices.
+author:
     - G. Wade Johnson <wade@anomaly.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Carp:                          0
-    Inline:                        0
-    Inline::C:                     0
-    Inline::MakeMaker:             0
-    Test::More:                    0
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Carp:               0
+    Inline:             0
+    Inline::C:          0
+    Inline::MakeMaker:  0
+    Test::More:         0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.50
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
